styles/style.css
/* Здесь вы напишете основную часть стилей страницы.

Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
✦ theme-dark — класс тёмной темы
✦ theme-light — класс светлой темы
✦ like-icon — для svg-иконки анимированного сердца
✦ card__like-button — для кнопки Like рядом с иконкой
✦ card__icon-button — для кнопки, оборачивающей иконку
✦ card__icon-button — для кнопки, оборачивающей иконку
✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
✦ button__text — для обозначения текстового элемента внутри кнопки

Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.

*/

.page {
  min-inline-size: 320px;
  min-block-size: 100dvb;
  font-family: var(--main-font);
  font-size: 18px;
  background-image: var(--background-image);
  background-color: var(--background-color, #FFF);
}

.header {
  display: flex;
  flex-direction: column;
  max-width: var(--card-width, 696px);
  margin: auto;
  margin-top: 102px;
  margin-bottom: 104px;
  align-items: center;
  justify-content: center;
  outline: 2px solid var(--themes-main-color, #000);
  background: var(--themes-background, #FFF);
  font-family: var(--header-font);
  padding-top: 136px;
  padding-bottom: 23px;
}

.header__title {
  font-size: 65px;
  font-weight: var(--font-weight-regular, 400);
}

.header__full-name {
  padding-top: 19px;
  font-size: 23px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  text-transform: uppercase;
}

.header__theme-menu {
  margin-top: 22px;
  margin-left: 18px;
}

.theme-menu__list {
  display: flex;
  flex-direction: column;
  gap: 9px;
}

.theme-menu__button {
  text-transform: uppercase;
  background: transparent;
  border: none;
  font-size: 14px;
  font-style: normal;
  font-weight: var(--font-weight-regular, 400);
  line-height: normal;
}

.theme-menu__button:disabled:before {
  content: "▶";
  position: absolute;
  margin-left: -20px;
  animation: menu_animation 0.5s ease-in-out alternate infinite;
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 54px;
}

.main__card {
  outline: 2px solid var(--themes-main-color, #000);
  background: var(--themes-background, #FFF);
  max-width: var(--card-width, 700px);
}

.card__title {
  color: var(--themes-main-color, #000);
  font-family: inherit;
  font-size: inherit;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  padding: 5px 12px 9px 12px;
}

.card__image-group {
  position: relative;
  border-top: 2px solid var(--accent-color);
  border-bottom: 2px solid var(--accent-color);
}

.card__image {
  display: block;
  object-fit: cover;
  width: 100%;
  height: 100%;

}

.card__image-watermark {
  position: absolute;
  top: 25px;
  right: 25px;
  color: var(--themes-main-color, #000);
  font-family: 'PressStart2P';
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  text-transform: uppercase;
  text-shadow: -1px 0 var(--watermark-outline), 0 1px var(--watermark-outline),
    1px 0 var(--watermark-outline), 0 -1px var(--watermark-outline);
  mix-blend-mode: hard-light;
}

.card__text {
  padding: 27px 25px 25px 25px;
  display: flex;
  flex-direction: column;
  gap: 27px;
}

.card__text-item {
  color: var(--themes-main-color, #000);
  font-family: inherit;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 116.667%;
}

.card__like-group {
  display: flex;
  gap: 4px;
  justify-content: end;
  align-items: center;
  margin-right: 25px;
  margin-bottom: 25px;
}

.card__like-heart {
  margin-right: 9px;
}

.card__like-button {
  background: transparent;
  border: none;
  outline: 2px solid var(--themes-main-color, #000);
  padding: 9px 17px;
  color: var(--themes-main-color, #000);
  font-family: 'PressStart2P';
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 90%;
  min-width: 128px;
  min-height: 36px;
}

.image-filter-1 {
  filter: sepia(80%);
}

.image-filter-2 {
  filter: hue-rotate(-90deg);
}

.image-filter-3 {
  filter: saturate(158%);
}

.image-filter-4 {
  filter: blur(0.2rem);
}

.image-filter-5 {
  filter: contrast(150%);
}

.image-filter-6 {
  filter: invert(0.7);
}

.image-filter-7 {
  filter: brightness(200%) opacity(0.8);
}

